--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.12.2",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@react-google-maps/api": "^2.18.1",
+    "@terrestris/react-geo": "^22.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,11 +20,14 @@
     "axios": "^1.4.0",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-simple-maps": "^3.0.0",
     "reactstrap": "^9.1.9",
     "save": "^2.9.0",
     "styled-components": "^5.3.10",
@@ -51,5 +56,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.9.3",
+    "react-openlayers": "^0.3.0"
   }
 }
