--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tomtom-international/web-sdk-maps": "^6.23.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "emailjs": "^4.0.1",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
